@@ -162,7 +162,7 @@ AC_ARG_ENABLE(gnome,
 
 if test "x$use_gnome" = "xyes"; then
   PKG_CHECK_MODULES(GNOME_WINDOW_DECORATOR,
-		    xrender >= 0.9    \
+		    xrender >= 0.8.4  \
 		    gtk+-2.0 >= 2.8.0 \
 		    gconf-2.0	      \
 		    libwnck-1.0	      \
